--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\Hieu.Nguyxn\\AppData\\Roaming\\NetBeans\\22\\config\\GlassFishEE6\\Properties\\gfv31250215261.properties
+deploy.ant.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\21\\config\\GlassFishEE6\\Properties\\gfv31906143703.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=D:/Java/GlashFishServer/glassfish/domains/domain1
-j2ee.server.home=D:/Java/GlashFishServer/glassfish
-j2ee.server.instance=[D:\\Java\\GlashFishServer\\glassfish;D:\\Java\\GlashFishServer\\glassfish\\domains\\domain1]deployer:gfv700ee10:localhost:4848
-j2ee.server.middleware=D:/Java/GlashFishServer
+j2ee.server.domain=D:/GlassFish/glassfish/domains/domain1
+j2ee.server.home=D:/GlassFish/glassfish
+j2ee.server.instance=[D:\\GlassFish\\glassfish;D:\\GlassFish\\glassfish\\domains\\domain1]deployer:gfv700ee10:localhost:4848
+j2ee.server.middleware=D:/GlassFish
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\Hieu.Nguyxn\\AppData\\Roaming\\NetBeans\\22\\build.properties
+user.properties.file=C:\\Users\\admin\\AppData\\Roaming\\NetBeans\\21\\build.properties
